# anunezc_web

./: .gitignore  package-lock.json  package.json  pyproject.toml  webpack.config.js
anunezc_web/: __init__.py  config.py  index.html
anunezc_web/js/: aboutme.jsx  academics.jsx  carat.jsx  experience.jsx  projects.jsx  skills.jsx  title.jsx
anunezc_web/static/css/: style.css
anunezc_web/static/js/: bundle.js  bundle.js.map
anunezc_web/templates/: index.html
anunezc_web/views/: __init__.py  index.py
